--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "keen-slider": "^6.8.6",
     "next": "15.5.6",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
